completado el envio de mensajes a discord

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,4 @@
 PORT=3000
+
+# Para obtener este URL hay que crear un bot en Discord y nos lo da automáticamente
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/1412712966209404938/asldjfasljkhdf
