añadimos verificacion de firma segun documentacion de github

--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,5 @@ PORT=3000
 
 # Para obtener este URL hay que crear un bot en Discord y nos lo da automáticamente
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/1412712966209404938/asldjfasljkhdf
+
+SECRET_TOKEN="53461670d6d7635d3477bf64ca7fcb3f"
